--- a/UIDesignTest2/UIDesignTest2/MasterPage.xaml
+++ b/UIDesignTest2/UIDesignTest2/MasterPage.xaml
@@ -15,6 +15,13 @@
                 <Image Source="notification.png" WidthRequest="20" HeightRequest="20" Margin="8,8,8,8"></Image>
             </StackLayout>
             <StackLayout Orientation="Vertical"  HorizontalOptions="FillAndExpand" >
+                <!--<ListView x:Name="ListView1" >
+                    <ListView.ItemTemplate>
+                        <DataTemplate>
+                            <TextCell Text="{Binding .} " />
+                            </DataTemplate>
+                    </ListView.ItemTemplate>
+                </ListView>-->
                 <Label Text="My ACCOUNT" FontSize="18" TextColor="#fffcff"></Label>
                 <BoxView HeightRequest="1" Color="#fffcff" Margin="0,4,0,0"></BoxView>
                 <Label Text="SHOP"  FontSize="18" TextColor="#fffcff"></Label>
