--- a/UIDesignTest2/UIDesignTest2/Shop.xaml
+++ b/UIDesignTest2/UIDesignTest2/Shop.xaml
@@ -1,12 +1,26 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="UIDesignTest2.Shop">
+             x:Class="UIDesignTest2.Shop"
+             BackgroundColor="DarkGray">
     <ContentPage.Content>
-        <StackLayout BackgroundColor="DarkOliveGreen">
-            <Label Text="Welcome to Xamarin.Forms!"
-                VerticalOptions="CenterAndExpand" 
-                HorizontalOptions="CenterAndExpand" />
+            <StackLayout Orientation="Vertical"  HorizontalOptions="CenterAndExpand" Margin="10,10,10,10"  BackgroundColor="White">
+                <SearchBar x:Name="SearchFor"
+                           Placeholder="search for"
+                />
+
+        </StackLayout>
+        <StackLayout Orientation="Vertical"  HorizontalOptions="CenterAndExpand" Margin="10,10,10,10"  BackgroundColor="White">
+            <ListView x:Name="ListProducts" HasUnevenRows="True"  RowHeight="50">
+                    <ListView.ItemTemplate>
+                        <DataTemplate>
+
+                        <ImageCell Text="{Binding Designation}" Detail="{Binding Status}" ImageSource="{Binding Image}"/>
+
+                        </DataTemplate>
+                    </ListView.ItemTemplate>
+
+                </ListView>
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
